# Gl_RewritingGame

./: CMakeLists.txt  Gl_wuziqi.sln  PropertySheet1.props
CallBack/: CallBack.vcxproj  CallBack.vcxproj.filters  Class.cpp  Class.h  callback.cpp
CallBack/x64/Debug/: CallBack.idb
DrawBoard/: BoardLocation.cpp  BoardLocation.h  DrawBoard.vcxproj  DrawBoard.vcxproj.filters  GlCirclePainter.h  glSquarePainter.cpp  glSquarePainter.h
Gl_wuziqi/: Gl_wuziqi.vcxproj  Gl_wuziqi.vcxproj.filters  Source.cpp  myVertices.h
Gl_wuziqi/migration/: comStruct.h  myfunction.cpp  myfunction.h
Gl_wuziqi/migration/data_base/: DataWuziqi.cpp  DataWuziqi.h
Gl_wuziqi/migration/rule/: rule.cpp  rule.h
Gl_wuziqi/migration/socket/: GameSocketManager.cpp  socketManager.cpp  socketManager.h
GlfwConfigure/: GlfwConfigure.h  GlfwConfigure.vcxproj  GlfwConfigure.vcxproj.filters
RuleWuziqi/: ChessMapData.cpp  ChessMapData.h  RuleWuziqi.vcxproj  RuleWuziqi.vcxproj.filters  WuziqiRule.cpp  WuziqiRule.h  main.cpp
ShaderReader/: MyShader.h  ShaderReader.vcxproj  ShaderReader.vcxproj.filters
ShaderReader/FIleManager/: WFIleTextManager.cpp
TextureManager/: TextureManager.vcxproj  TextureManager.vcxproj.filters
shader/squareShader/: fragmentShaderSquare.txt  vertextShaderSquare.txt
src/: main.cpp
src/CallBack/: Class.cpp  callback.h  mouseClick_callback.cpp
src/Data/: PlayerData.cpp  PlayerData.h
src/DrawBoard/: GlCirclePainter.cpp  circleChessVerticeBuild.cpp  glSquarePainter.cpp
src/Gl_wuziqi/: main.cpp  resource.h
src/GlfwConfigure/CallBack/: callback.cpp  (+1 more)
(+16 files in other folders)
